tests/baselines/reference/AnnotationDeclarationNegative20.d.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative20.d.ets(1,9): error TS1029: 'export' modifier must precede 'declare' modifier.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative20.d.ets (1 errors) ====
    declare export @interface Anno {}
            ~~~~~~
!!! error TS1029: 'export' modifier must precede 'declare' modifier.